Fixing collapsed sidebar at page load

--- a/src/scss/bootstrap-dark/_variables-alt.scss
+++ b/src/scss/bootstrap-dark/_variables-alt.scss
@@ -91,7 +91,7 @@ $theme-colors-rgb-alt: map-loop($theme-colors-alt, to-rgb, "$value") !default;
 
 // The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
 // See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
-$min-contrast-ratio-alt:   2.0 !default;
+$min-contrast-ratio-alt:   2 !default;
 
 $color-contrast-dark-alt:      $black-alt !default;
 $color-contrast-light-alt:     $white-alt !default;
